# robot_descriptions.py

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  packaging.yml  test.yml
doc/: Makefile
doc/src/: conf.py  developer-notes.rst  index.rst  installation.rst
examples/: README.md  all_humanoids.py  all_quadrupeds.py  arm_gripper_attachment.py  display_urdf_frames.py  load_in_idyntree.py  load_in_mujoco.py  load_in_pinocchio.py  load_in_pybullet.py  load_in_robomeshcat.py  load_in_yourdfpy.py  show_in_bullet.py  show_in_candlewick.py  show_in_meshcat.py  show_in_mujoco.py  show_in_pybullet.py  show_in_robomeshcat.py  show_in_yourdfpy.py  show_with_meshcat.py  show_with_yourdfpy.py  simulate_in_pybullet.py  specific_commit.py
robot_descriptions/: __init__.py  __main__.py  _cache.py  _command_line.py  _description_names.py  _descriptions.py  _empty_description.py  _package_dirs.py  _repositories.py  _xacro.py  a1_description.py  a1_mj_description.py  ability_hand_description.py  ability_hand_mj_description.py  adam_lite_mj_description.py  aero_hand_open_description.py  aero_hand_open_mj_description.py  aliengo_description.py  aliengo_mj_description.py  allegro_hand_description.py  allegro_hand_mj_description.py  aloha_mj_description.py  anymal_b_description.py  anymal_b_mj_description.py  anymal_c_description.py  anymal_c_mj_description.py  anymal_d_description.py  apollo_mj_description.py  arx_l5_mj_description.py  atlas_description.py  atlas_drc_description.py  atlas_v4_description.py  b1_description.py  b2_description.py  bambot_description.py  barrett_hand_description.py  baxter_description.py  berkeley_humanoid_description.py  bolt_description.py  booster_t1_description.py  (+178 more)
robot_descriptions/loaders/: __init__.py  idyntree.py  mujoco.py  pinocchio.py  pinocchio_.py  pybullet.py  robomeshcat.py  yourdfpy.py
scripts/: generate_readme_descriptions.py
tests/: __init__.py  test_cache.py  test_clone_to_cache.py  test_clone_to_directory.py  test_descriptions.py  test_git.py  test_loaders.py  test_pinocchio.py  test_progress_bar.py  test_pybullet.py  test_readme.py  test_robomeshcat.py  test_xacro.py  test_yourdfpy.py
tests/loaders/: test_idyntree.py  test_mujoco.py  test_pinocchio.py  test_pybullet.py  test_robomeshcat.py  test_yourdfpy.py
